--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
             <img id="logo" width="50" height="50" src="../assets/logo.svg">
             <div class="appname">
                 <h5>Smart Asset Management</h5>
-                <h3>Anti-theft System :: SAM-AT</h3>
+                <h3>SAM-AT</h3>
             </div>
         </div>
         <div class="search-auth-group">
