--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -25,8 +25,40 @@
             </div>
         </div>
     </nav>
-    <section class="section categories">
-        
+    <section class="section">
+        <div class="aesthetics"></div>
+        <div class="dashboard-content">
+            <div class="dashboard-header">
+                <h1>Dashboard</h1>
+                <h2>Overview</h2>
+            </div>
+            <div class="dashboard-body">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Assets Count</h3>
+                    </div>
+                    <div class="card-content">
+                        <h1>25</h1>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Assets Checked Out</h3>
+                    </div>
+                    <div class="card-content">
+                        <h1>12</h1>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Asset Overdue</h3>
+                    </div>
+                    <div class="card-content">
+                        <h1>3</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
