--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&display=swap');
+    </style>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Dashboard</title>
 </head>
@@ -33,7 +37,7 @@
                 <h2>Overview</h2>
             </div>
             <div class="dashboard-body">
-                <div class="card">
+                <div class="overview-card">
                     <div class="card-header">
                         <h3>Assets Count</h3>
                     </div>
@@ -41,7 +45,7 @@
                         <h1>25</h1>
                     </div>
                 </div>
-                <div class="card">
+                <div class="overview-card">
                     <div class="card-header">
                         <h3>Assets Checked Out</h3>
                     </div>
@@ -49,9 +53,9 @@
                         <h1>12</h1>
                     </div>
                 </div>
-                <div class="card">
+                <div class="overview-card">
                     <div class="card-header">
-                        <h3>Asset Overdue</h3>
+                        <h3>Assets Overdue</h3>
                     </div>
                     <div class="card-content">
                         <h1>3</h1>
