hosted the client

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar">
         <div class="app-info">
-            <img id="logo" width="50" height="50" src="../assets/logo.svg">
+            <img id="logo" width="50" height="50" src="./assets/logo.svg">
             <div class="appname">
                 <h5>Smart Asset Management</h5>
                 <h3>Dashboard :: SAM-AT</h3>
