--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar">
         <div class="app-info">
-            <img id="logo" width="50" height="50" src="../assets/logo.svg">
+            <img id="logo" width="50" height="50" src="./assets/logo.svg">
             <div class="appname">
                 <h5>Smart Asset Management</h5>
                 <h3>SAM-AT</h3>
