--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
                     <label for="password">Password</label>
                     <p class="input-error"><i class="fa-solid fa-circle-info"></i> Password must be at least 8 characters long</p>
                 </div>
-                <div class="input-wrapper">
+                <!--div class="input-wrapper">
                     <div class="input-icon">
                         <i class="fa fa-building"></i>
                         <select name="department" id="department">
@@ -124,7 +124,7 @@
                         </select>
                     </div>
                     <label for="department">Department</label>
-                </div>
+                </div-->
                 <div class="input-wrapper">
                     <div class="input-icon">
                         <i class="fa fa-briefcase"></i>
