--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,10 @@
             <img id="logo" width="50" height="50" src="./assets/logo.svg">
             <div class="appname">
                 <h5>Smart Asset Management</h5>
-                <h3>SAM-AT</h3>
+                <h3>SAM-AT System</h3>
             </div>
         </div>
         <div class="search-auth-group">
-            <div class="search-wrapper">
-                <input type="text" name="searchbox" placeholder="Search SAM-AT">
-                <i class="fa fa-search"></i>
-            </div>
             <div class="btn-group">
                 <button class="auth-btn" id="login-form-btn">Login</button>
                 <button class="auth-btn" id="signup-form-btn">Sign Up</button>
@@ -36,6 +32,7 @@
     <section class="section hero preview">
         <h2>Securing, Tracking and Managing IS Departmant's Assets</h2>
         <p id="hero-text"></p>
+        <h3>Features</h3>
         <div class="features">
             <div class="feature-container authorized">
                 <div class="feature-text authorized">
@@ -45,7 +42,7 @@
             </div>
             <div class="feature-container">
                 <div class="feature-text">
-                    <h3>Real-time Search</h3>
+                    <h3>Dashboard</h3>
                     <p></p>
                 </div>
             </div>
@@ -67,15 +64,16 @@
         <button id="close-form">&#10005;</button>
         <div class="card form">
             <form id="login-form">
+                <p id="login-error"></p>
                 <h3>Welcome Back</h3>
-                <div class="input-wrapper email">
+                <div class="input-wrapper email valid">
                     <div class="input-icon">
                         <i class="fa fa-at"></i>
                         <input type="text" name="identifier" required>
                     </div>
                     <label for="identifier">Username</label>
                 </div>
-                <div class="input-wrapper">
+                <div class="input-wrapper valid">
                     <div class="input-icon">
                         <i class="fa fa-lock"></i>
                         <input type="password" name="password" required>
@@ -83,11 +81,11 @@
                     </div>
                     <label for="password">Password</label>
                 </div>
-                <a href="/passwordless" id="forgot-password">Login without the password</a>
                 <button type="submit">Login</button>
                 <p class="account-exists">No account yet? <span class="form-toggle-btn">Sign up here</span></p>
             </form>
             <form id="signup-form">
+                <p id="signup-error"></p>
                 <h3>Welcome</h3>
                 <div class="input-wrapper">
                     <div class="input-icon">
@@ -107,25 +105,13 @@
                 <div class="input-wrapper">
                     <div class="input-icon">
                         <i class="fa fa-lock"></i>
-                        <input type="password" name="password" required>
+                        <input id="signup-password" type="password" name="password" required>
                         <i class="fa fa-eye pw-mask"></i>
                     </div>
                     <label for="password">Password</label>
                     <p class="input-error"><i class="fa-solid fa-circle-info"></i> Password must be at least 8 characters long</p>
                 </div>
-                <!--div class="input-wrapper">
-                    <div class="input-icon">
-                        <i class="fa fa-building"></i>
-                        <select name="department" id="department">
-                            <option value="is-dept">Information Systems</option>
-                            <option value="it-dept" disabled>Information Technology</option>
-                            <option value="fa-dept" disabled>Financial Accounting</option>
-                            <option value="icm-dept" disabled>Information & Corporate Management</option>
-                        </select>
-                    </div>
-                    <label for="department">Department</label>
-                </div-->
-                <div class="input-wrapper">
+                <div class="input-wrapper valid">
                     <div class="input-icon">
                         <i class="fa fa-briefcase"></i>
                         <select name="staffrole" id="staffrole">
@@ -141,7 +127,7 @@
                     </div>
                     <label for="staffrole">Role</label>
                 </div>
-                <button id="signup-btn" type="submit" disabled>Register</button>
+                <button id="signup-btn" type="submit">Register</button>
                 <p class="account-exists">Already have an account? <span class="form-toggle-btn">Login here</span></p>
             </form>
             <div class="card graphic"></div>
