--- a/public/index.html
+++ b/public/index.html
@@ -48,13 +48,7 @@
             </div>
             <div class="feature-container request">
                 <div class="feature-text request">
-                    <h3>Automated Alerts</h3>
-                    <p></p>
-                </div>
-            </div>
-            <div class="feature-container issues">
-                <div class="feature-text issues">
-                    <h3>Virtual Assistance</h3>
+                    <h3>Request Alerts</h3>
                     <p></p>
                 </div>
             </div>
@@ -81,6 +75,7 @@
                     </div>
                     <label for="password">Password</label>
                 </div>
+                <a href="forgot.html" id="forgot-password">Forgot Password?</a>
                 <button type="submit">Login</button>
                 <p class="account-exists">No account yet? <span class="form-toggle-btn">Sign up here</span></p>
             </form>
@@ -133,6 +128,9 @@
             <div class="card graphic"></div>
         </div>
     </section>
+    <footer>
+        &copy; Smart Asset Management (SAM-AT)
+    </footer>
     <script src="script.js"></script>
 </body>
 
