--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                 <h3>Welcome Back</h3>
                 <div class="input-wrapper email valid">
                     <div class="input-icon">
-                        <i class="fa fa-at"></i>
+                        <i class="fa fa-user"></i>
                         <input type="text" name="identifier" required>
                     </div>
                     <label for="identifier">Username</label>
@@ -117,7 +117,7 @@
                             </optgroup>
                             <option value="hod">Head of Department</option>
                             <option value="dean">Dean Officer</option>
-                            <option value="student">Student</option>
+                            <option value="student" selected>Student</option>
                         </select>
                     </div>
                     <label for="staffrole">Role</label>
