--- a/public/login.html
+++ b/public/login.html
@@ -30,7 +30,7 @@
             <h3>Welcome Back</h3>
             <div class="input-wrapper email">
                 <div class="input-icon">
-                    <i class="fa fa-at"></i>
+                    <i class="fa fa-user"></i>
                     <input type="text" name="identifier" required>
                 </div>
                 <label for="identifier">Username</label>
