--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         @import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&display=swap');
     </style>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>SAM-AT</title>
+    <title>SAM-AT System</title>
 </head>
 
 <body>
